dataset/local/tf_lambda_public_access/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_permission
        name: allow_sns
        values:
          action: lambda:InvokeFunction
          function_name: my-lambda-function
          principal: "sns.amazonaws.com"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_permission
        name: allow_all
        values:
          action: lambda:InvokeFunction
          function_name: my-lambda-function
          principal: "*"
